test/fixtures/compile/if/if.xpblk.missing.nb.ne.wp.var.error
SyntaxError: Expecting "else" but got "EOF" (fixtures/compile/if/if.xpblk.missing.nb.ne.wp.var.ks:5:2)